--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <main>
       <!-- РЕШЕНИЯ -->
       <section class="hero">
-        <div class="container hero-container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <div class="container hero_container">
+          <h1 class="hero_title">Эффективные решения для вашего бизнеса</h1>
           <button class="btn btn_hero" type="button" data-modal-open>
             Заказать услугу
           </button>
@@ -76,53 +76,53 @@
       </section>
       <!-- ПОЧЕМУ МЫ -->
       <section class="whyus section">
-        <div class="container whyus-container">
+        <div class="container whyus_container">
           <h2 class="visually-hidden">Why us</h2>
-          <ul class="whyus-list list">
-            <li class="whyus-item">
-              <div class="whyus-item-pkt">
-                <svg class="whyus-pkt-item">
+          <ul class="whyus_list list">
+            <li class="whyus_item">
+              <div class="whyus_item-pkt">
+                <svg class="whyus_pkt-item">
                   <use href="./images/sprite6.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="whyus-item-header">Внимание к деталям</h3>
-              <p class="whyus-item-text">
+              <h3 class="whyus_item-header">Внимание к деталям</h3>
+              <p class="whyus_item-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="whyus-item">
-              <div class="whyus-item-pkt">
-                <svg class="whyus-pkt-item">
+            <li class="whyus_item">
+              <div class="whyus_item-pkt">
+                <svg class="whyus_pkt-item">
                   <use href="./images/sprite6.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="whyus-item-header">Пунктуальность</h3>
-              <p class="whyus-item-text">
+              <h3 class="whyus_item-header">Пунктуальность</h3>
+              <p class="whyus_item-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="whyus-item">
-              <div class="whyus-item-pkt">
-                <svg class="whyus-pkt-item">
+            <li class="whyus_item">
+              <div class="whyus_item-pkt">
+                <svg class="whyus_pkt-item">
                   <use href="./images/sprite6.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="whyus-item-header">Планирование</h3>
-              <p class="whyus-item-text">
+              <h3 class="whyus_item-header">Планирование</h3>
+              <p class="whyus_item-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="whyus-item">
-              <div class="whyus-item-pkt">
-                <svg class="whyus-pkt-item">
+            <li class="whyus_item">
+              <div class="whyus_item-pkt">
+                <svg class="whyus_pkt-item">
                   <use href="./images/sprite6.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="whyus-item-header">Современные технологии</h3>
-              <p class="whyus-item-text">
+              <h3 class="whyus_item-header">Современные технологии</h3>
+              <p class="whyus_item-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -134,7 +134,7 @@
       <section class="section wedoing">
         <div class="container">
           <h2 class="section_title">Чем мы занимаемся</h2>
-          <ul class="wedoing-list list">
+          <ul class="wedoing_list list">
             <li class="wedoing_item">
               <img
                 src="./images/desk-office.jpg"
@@ -166,15 +166,15 @@
       <section class="ourteam section">
         <div class="container">
           <h2 class="section_title">Наша команда</h2>
-          <ul class="ourteam-list list">
-            <li class="ourteam-item ourteam-card">
+          <ul class="ourteam_list list">
+            <li class="ourteam_item ourteam-card">
               <img
                 src="./images/i4853.jpg"
                 alt="Фотография портрет Игоря Демьяненко - дизайнера продукта"
                 width="270"
               />
-              <h3 class="ourteam-item-title">Игорь Демьяненко</h3>
-              <p class="ourteam-item-text" lang="en">Product Designer</p>
+              <h3 class="ourteam_item-title">Игорь Демьяненко</h3>
+              <p class="ourteam_item-text" lang="en">Product Designer</p>
               <div>
                 <ul class="ourteam-socital-list list">
                   <li class="ourteam-socital-item">
@@ -212,14 +212,14 @@
                 </ul>
               </div>
             </li>
-            <li class="ourteam-item ourteam-card">
+            <li class="ourteam_item ourteam-card">
               <img
                 src="./images/o5844.jpg"
                 alt="Фотография портрет Ольга Репина - Фронтенд разработчика"
                 width="270"
               />
-              <h3 class="ourteam-item-title">Ольга Репина</h3>
-              <p class="ourteam-item-text" lang="en">Frontend Developer</p>
+              <h3 class="ourteam_item-title">Ольга Репина</h3>
+              <p class="ourteam_item-text" lang="en">Frontend Developer</p>
               <div>
                 <ul class="ourteam-socital-list list">
                   <li class="ourteam-socital-item">
@@ -257,14 +257,14 @@
                 </ul>
               </div>
             </li>
-            <li class="ourteam-item ourteam-card">
+            <li class="ourteam_item ourteam-card">
               <img
                 src="./images/n16166.jpg"
                 alt="Фотография портрет Николай Тарасов - маркетинг"
                 width="270"
               />
-              <h3 class="ourteam-item-title">Николай Тарасов</h3>
-              <p class="ourteam-item-text" lang="en">Marketing</p>
+              <h3 class="ourteam_item-title">Николай Тарасов</h3>
+              <p class="ourteam_item-text" lang="en">Marketing</p>
               <div>
                 <ul class="ourteam-socital-list list">
                   <li class="ourteam-socital-item">
@@ -302,14 +302,14 @@
                 </ul>
               </div>
             </li>
-            <li class="ourteam-item ourteam-card">
+            <li class="ourteam_item ourteam-card">
               <img
                 src="./images/m2968.jpg"
                 alt="Фотография портрет Михаил Ермаков - дизайнер интрефеса пользователя"
                 width="270"
               />
-              <h3 class="ourteam-item-title">Михаил Ермаков</h3>
-              <p class="ourteam-item-text" lang="en">UI Designer</p>
+              <h3 class="ourteam_item-title">Михаил Ермаков</h3>
+              <p class="ourteam_item-text" lang="en">UI Designer</p>
               <div>
                 <ul class="ourteam-socital-list list">
                   <li class="ourteam-socital-item">
@@ -354,51 +354,51 @@
       <section class="section">
         <div class="container">
           <h2 class="section_title">Постоянные клиенты</h2>
-          <ul class="clients-list list">
-            <li class="clients-item">
+          <ul class="clients_list list">
+            <li class="clients_item">
               <!-- 1 -->
-              <a class="clients-link link" href="">
-                <svg class="clients-icon">
+              <a class="clients_link link" href="">
+                <svg class="clients_icon">
                   <use href="./images/sprite6.svg#icon-logo1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients_item">
               <!-- 2 -->
-              <a class="clients-link link" href="">
-                <svg class="clients-icon">
+              <a class="clients_link link" href="">
+                <svg class="clients_icon">
                   <use href="./images/sprite6.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients_item">
               <!-- 3 -->
-              <a class="clients-link link" href="">
-                <svg class="clients-icon">
+              <a class="clients_link link" href="">
+                <svg class="clients_icon">
                   <use href="./images/sprite6.svg#icon-logo3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients_item">
               <!-- 4 -->
-              <a class="clients-link link" href="">
-                <svg class="clients-icon">
+              <a class="clients_link link" href="">
+                <svg class="clients_icon">
                   <use href="./images/sprite6.svg#icon-logo4"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients_item">
               <!-- 5 -->
-              <a class="clients-link link" href="">
-                <svg class="clients-icon">
+              <a class="clients_link link" href="">
+                <svg class="clients_icon">
                   <use href="./images/sprite6.svg#icon-logo5"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
+            <li class="clients_item">
               <!-- 6 -->
-              <a class="clients-link link" href="">
-                <svg class="clients-icon" width="94" height="44">
+              <a class="clients_link link" href="">
+                <svg class="clients_icon" width="94" height="44">
                   <use href="./images/sprite6.svg#icon-logo6"></use>
                 </svg>
               </a>
@@ -415,9 +415,9 @@
             <a href="./index.html" class="link logo_indent--bottom logo"
               >Web<span class="logo--light">Studio</span>
             </a>
-            <address class="footer-contact">
+            <address class="footer_contact">
               <ul class="footer-list list">
-                <li class="footer-item">
+                <li class="footer_item">
                   <a
                     class="link address"
                     href="https://goo.gl/maps/CdvJLRiEL6Q8Smko8"
@@ -426,12 +426,12 @@
                     >г. Киев, пр-т Леси Украинки, 26</a
                   >
                 </li>
-                <li class="footer-item">
+                <li class="footer_item">
                   <a class="link contact" href="mailto:info@example.com"
                     >info@example.com</a
                   >
                 </li>
-                <li class="footer-item">
+                <li class="footer_item">
                   <a class="link contact" href="tel:+380991111111"
                     >+38 099 111 11 11</a
                   >
@@ -496,65 +496,67 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <p class="modal_title">Оставьте свои данные, мы вам перезвоним</p>
         <form action="#" class="modal-form">
-          <div class="modal-field">
-            <label for="user-name" class="input-label">Имя</label>
-            <span class="input-wrapper">
+          <div class="modal_field">
+            <label for="user-name" class="modal_input-label">Имя</label>
+            <span class="modal_input-wrapper">
               <input
                 type="text"
                 name="user-name"
                 id="user-name"
-                class="modal-input"
+                class="modal_input"
               />
-              <svg class="input-icon">
+              <svg class="input_icon">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </span>
           </div>
-          <div class="modal-field">
-            <label for="user-tel" class="input-label">Телефон</label>
-            <span class="input-wrapper">
+          <div class="modal_field">
+            <label for="user-tel" class="modal_input-label">Телефон</label>
+            <span class="modal_input-wrapper">
               <input
                 type="tel"
                 name="user-tel"
                 id="user-tel"
-                class="modal-input"
+                class="modal_input"
               />
-              <svg class="input-icon">
+              <svg class="input_icon">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </span>
           </div>
-          <div class="modal-field">
-            <label for="user-mail" class="input-label">Почта</label>
-            <span class="input-wrapper">
+          <div class="modal_field">
+            <label for="user-mail" class="modal_input-label">Почта</label>
+            <span class="modal_input-wrapper">
               <input
                 type="email"
                 name="user-mail"
                 id="user-mail"
-                class="modal-input"
+                class="modal_input"
               />
-              <svg class="input-icon">
+              <svg class="input_icon">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </span>
           </div>
-          <div class="modal-field">
-            <label for="user-commit" class="input-label">Комментарий</label>
+          <div class="modal_field">
+            <label for="user-commit" class="modal_input-label"
+              >Комментарий</label
+            >
             <textarea
               name="user-commit"
               id="user-commit"
-              class="modal-user-commit"
+              class="modal_user-commit"
               placeholder="Введите текст"
             ></textarea>
           </div>
           <input
             type="checkbox"
-            id="modal-checkbox"
-            class="modal-checkbox visually-hidden"
+            id="modal_checkbox"
+            class="modal_checkbox visually-hidden"
           />
-          <label for="modal-checkbox" class="check-text"
+          <label for="modal_checkbox" class="check_text"
             ><span>
               <svg class="check-icon" width="11" height="8">
                 <use href="./images/icons.svg#icon-check"></use>
@@ -563,7 +565,7 @@
               Условия договора</a
             ></label
           >
-          <button type="submit" class="btn btn_hero modal-btn">
+          <button type="submit" class="btn btn_hero modal_btn">
             Отправить
           </button>
         </form>
