--- a/portofolio.html
+++ b/portofolio.html
@@ -68,8 +68,8 @@
       <!-- ФИЛЬТР -->
       <section class="portofolio-hero section">
         <div class="container">
-          <h1 class="portofolio-hero-title visually-hidden">Портофолио</h1>
-          <ul class="filtr-list list">
+          <h1 class="portofolio-hero_title visually-hidden">Портофолио</h1>
+          <ul class="filtr_list list">
             <li class="filtr-item">
               <button
                 class="btn-filtr btn-filtr_color carrent-btn"
@@ -104,14 +104,14 @@
             <!--0-->
             <li class="portofolio_item">
               <!--1-1-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-11.jpg"
                     alt="Фотография экрана лаптопа. На экране страница сайта."
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -125,14 +125,14 @@
             </li>
             <li class="portofolio_item">
               <!--1-2-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-12.jpg"
                     alt="Постер баскетболисты."
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -148,14 +148,14 @@
             </li>
             <li class="portofolio_item">
               <!--1-3-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-13.jpg"
                     alt="Логотип ресторана"
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -171,14 +171,14 @@
             </li>
             <li class="portofolio_item">
               <!--2-1-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-21.jpg"
                     alt="Фотография наушников"
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -194,14 +194,14 @@
             </li>
             <li class="portofolio_item">
               <!--2-2-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-22.jpg"
                     alt="Фотография с двумя коробками духов"
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -217,14 +217,14 @@
             </li>
             <li class="portofolio_item">
               <!--2-3-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-23.jpg"
                     alt="Фотография экрана стационарного компьютера"
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -240,14 +240,14 @@
             </li>
             <li class="portofolio_item">
               <!--3-1-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-31.jpg"
                     alt="Фотография разворота издания книги"
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -263,14 +263,14 @@
             </li>
             <li class="portofolio_item">
               <!--3-2-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-32.jpg"
                     alt="Фотография дизайна стикера одежды"
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -286,14 +286,14 @@
             </li>
             <li class="portofolio_item">
               <!--3-3-->
-              <a href="" class="portofolio-link link">
-                <div class="portofolio-top-wrappter">
+              <a href="" class="portofolio_link link">
+                <div class="portofolio_top-wrappter">
                   <img
                     src="./images/portfolio-33.jpg"
                     alt="Фотография нотбука"
                     width="370"
                   />
-                  <p class="porofolio-top-text">
+                  <p class="porofolio_top-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -319,9 +319,9 @@
             <a href="./index.html" class="link logo_indent--bottom logo"
               >Web<span class="logo--light">Studio</span>
             </a>
-            <address class="footer-contact">
+            <address class="footer_contact">
               <ul class="footer-list list">
-                <li class="footer-item">
+                <li class="footer_item">
                   <a
                     class="link address"
                     href="https://goo.gl/maps/CdvJLRiEL6Q8Smko8"
@@ -330,12 +330,12 @@
                     >г. Киев, пр-т Леси Украинки, 26</a
                   >
                 </li>
-                <li class="footer-item">
+                <li class="footer_item">
                   <a class="link contact" href="mailto:info@example.com"
                     >info@example.com</a
                   >
                 </li>
-                <li class="footer-item">
+                <li class="footer_item">
                   <a class="link contact" href="tel:+380991111111"
                     >+38 099 111 11 11</a
                   >
